--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class="card-section">
     <img src="https://cdn-icons-png.flaticon.com/512/2826/2826209.png" alt="" class="card__img">
     <img class="card__img_r" id="r" src="https://cdn-icons-png.flaticon.com/512/1645/1645923.png" alt="">
-    <a href="" class="card">
+    <a href="/src/projects/deniza-project/index.html" class="card">
       <h2>Проект Денизы</h2>
     </a>
     <a href="" class="card">
