home page/ Исправил структуру

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <h2>Проект Денизы</h2>
     </a>
-    <a href="" class="card">
+    <a href="./src/projects/nurlan-project/index.html" class="card">
       <h2>Проект Нурлана</h2>
     </a>
     <a href="" class="card">
