добавила несколько страниц

--- a/src/projects/nurlan-project/src/pages/portfolio/index.html
+++ b/src/projects/nurlan-project/src/pages/portfolio/index.html
@@ -27,16 +27,146 @@
         </div> 
     </header>
     <main class="main">
-        <div class="container">
-            portfolio
-            
+        <section class="portofolio">
+            <div class="container">
+                <h2 class="portofolio__title">
+                    Portofolio
+                </h2>
+                <p class="portofolio__text">
+                    It is a long established fact that a reader will be <br> distracted by the readable content of a
+                    page
+                    when <br> looking at its layout.
+                </p>
+                <div class="portofolio__img"></div>
+            </div>
+        </section>
+        <section class="portofolio-room">
+            <div class="container">
+                <div class="d-flex">
+                    <h3 class="portofolio-room__title">
+                        Portfolio 
+                   <img src="./src/img/line.png" alt="" class="portofolio-room__line">
+                    </h3>
 
-        </div>
+                </div>
+                <div class="portofolio-room__general">
+                    <div class="portofolio-room__img1"></div>
+                    <div class="portofolio-room__carb">
+                        <h3 class="portofolio-room__title">
+                            Minimalist Room
+                        </h3>
+                        <p class="portofolio-room__text">
+                            Online learning with us <br> does not interfere with <br> your daily life. because <br>
+                            learning can be done
+                            <br>anytime and anywhere.
+                        </p>
+                        <a href="../../pages/minimalistRoom/index.html" class="portofolio-room__btn">See More</a>
+                    </div>
+                </div>
+                <div class="portofolio-room__general">
+                    <div class="portofolio-room__card">
+                        <h3 class="portofolio-room__title">
+                            Vintage Room
+                        </h3>
+                        <p class="portofolio-room__text">
+                            Online learning with us <br> does not interfere with <br> your daily life. because <br>
+                            learning can be
+                            done <br> anytime and anywhere.
+                        </p>
+                        <a href="../../pages/vintageRoom/index.html" class="portofolio-room__btn">See More</a>
+                    </div>
+                    <div class="portofolio-room__img2"></div>
+                </div>
+                <div class="portofolio-room__general">
+                    <div class="portofolio-room__img3"></div>
+                    <div class="portofolio-room__card">
+                        <h3 class="portofolio-room__title">
+                            Modern Room
+                        </h3>
+                        <p class="portofolio-room__text">
+                            Online learning with us <br> does not interfere with <br> your daily life. because <br>
+                            learning can be
+                            done <br> anytime and anywhere.
+                        </p>
+                        <a href="../../pages/modernRoom/index.html" class="portofolio-room__btn">See More</a>
+                    </div>
+                </div>
+                <div class="portofolio-room__general">
+                    <div class="portofolio-room__card">
+                        <h3 class="portofolio-room__title">
+                            transitional Room
+                        </h3>
+                        <p class="portofolio-room__text">
+                            Online learning with us <br> does not interfere with <br> your daily life. because <br>
+                            learning can be
+                            done <br> anytime and anywhere.
+                        </p>
+                        <a href="../../pages/transitionalRoom/index.html" class="portofolio-room__btn">See More</a>
+                    </div>
+                    <div class="portofolio-room__img4"></div>
+                </div>
+            </div>
+        </section>
+        <section class="portofolio-choose">
+            <div class="container">
+                <div class="d-flex">
+                    <h3 class="portofolio-room__title">
+                        SERVICE
+                    </h3>
+                    <div class="portofolio-room__line">
+                    </div>
+                </div>
+                <h3 class="portofolio-choose__title">
+                    Why Choose Us
+                </h3>
+                <p class="portofolio-choose__text">
+                    Customize your interior design into a dream place <br> with the best designers and quality
+                    furniture. We
+                    try <br> our best to fulfill your expectations.
+                </p>
+                <div class="portofolio-choose__box">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="portofolio-choose__ava"></div>
+                            <h4 class="portofolio-choose__title">
+                                High Quality
+                            </h4>
+                            <p class="portofolio-choose__text">
+                                Customize your interior design into a <br> dream place with the best designers <br> and
+                                quality
+                                furniture. We try our best <br> to fulfill your expectations.
+                            </p>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="portofolio-choose__ava"></div>
+                            <h4 class="portofolio-choose__title">
+                                Professional Designer
+                            </h4>
+                            <p class="portofolio-choose__text">
+                                Customize your interior design into a <br> dream place with the best designers <br> and
+                                quality
+                                furniture. We try our best <br> to fulfill your expectations.
+                            </p>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="portofolio-choose__ava"></div>
+                            <h4 class="portofolio-choose__title">
+                                The Best Services
+                            </h4>
+                            <p class="portofolio-choose__text">
+                                Customize your interior design into a <br> dream place with the best designers <br> and
+                                quality
+                                furniture. We try our best <br> to fulfill your expectations.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+               
+            </div>
+        </section>
     </main>
 
-
     <footer class="footer">
-
         <div class="footer-upper">
             <div class="row">
                 <div class="col-6">
