--- a/src/projects/nurlan-project/src/pages/minimalistRoom/index.html
+++ b/src/projects/nurlan-project/src/pages/minimalistRoom/index.html
@@ -27,11 +27,74 @@
         </div> 
     </header>
     <main class="main">
-        <div class="container">
-            Minimalistic Room
-            
-
-        </div>
+        <section class="portofolio">
+            <div class="container">
+                <h2 class="portofolio__title">
+                    Minimalist Room
+                </h2>
+                <p class="portofolio__text">
+                    It is a long established fact that a reader will be <br> distracted by the readable content of a
+                    page
+                    when <br> looking at its layout.
+                </p>
+                <div class="portofolio__img"></div>
+            </div>
+        </section>
+        <section class="portofolio__info">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3 class="portofolio__info-title">
+                            Project Overview
+                        </h3>
+                        <p class="portofolio__info-text">
+                            Online learning with us does not interfere with your daily life.<br> because learning can be
+                            done anytime and anywhere. Online<br> learning with us does not interfere with your daily
+                            life.
+                            because<br> learning can be done anytime and anywhere. Online learning<br> with us does not
+                            interfere with your daily life. because learning<br> can be done anytime and anywhere.
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <h3 class="portofolio__info-title">
+                            Design Process
+                        </h3>
+                        <p class="portofolio__info-text">
+                            Online learning with us does not interfere with your daily life.<br> because learning can be
+                            done anytime and anywhere. Online<br> learning with us does not interfere with your daily
+                            life.
+                            because<br> learning can be done anytime and anywhere.
+                            <br> <br>
+                            Online learning with us does not interfere with your daily life.<br> because learning can be
+                            done anytime and anywhere. Online <br>learning with us does not interfere with your daily
+                            life.
+                            because <br>learning can be done anytime and anywhere.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="portofolio__bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="portofolio__bg-first"></div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="portofolio__bg-second"></div>
+                    </div>
+                </div>
+               <div class="portofolio__bg-third"></div>
+               <div class="row">
+                <div class="col-md-6">
+                    <div class="portofolio__bg-fourth"></div>
+                </div>
+                <div class="col-md-6">
+                    <div class="portofolio__bg-fifth"></div>
+                </div>
+               </div>
+            </div>
+        </section>
     </main>
 
 
