--- a/src/projects/nurlan-project/src/pages/ourTeams/index.html
+++ b/src/projects/nurlan-project/src/pages/ourTeams/index.html
@@ -27,11 +27,156 @@
         </div> 
     </header>
     <main class="main">
-        <div class="container">
-            Our teams
-            
+        <section class="our-teams">
+            <div class="container">
+                <h2 class="our-teams__title">
+                    Our Teams
+                </h2>
+                <p class="our-teams__text">
+                    It is a long established fact that a reader will be distracted by <br> the readable content of a
+                    page
+                    when looking at its layout.
+                </p>
+                <div class="our-teams__img"></div>
+            </div>
+        </section>
+        <section class="our-creative">
+            <div class="container">
+                <div class="d-flex">
+                    <p class="about-choose__service">
+                        Designer
+                        <img src="../../images/ourTeams/line.png" alt="" class="about-choose__line">
+                    </p>
+                </div>
+                <h3 class="our-choose__title">
+                    Creative Person
+                </h3>
+                <p class="our-choose__text">
+                    Customize your interior design into a dream place <br> with the best designers and quality
+                    furniture. We
+                    try <br> our best to fulfill your expectations.
+                </p>
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="../../images/ourTeams/img1.png" alt="" class="our-creative__img">
+                        <div class="our-creative__card">
+                            <h3 class="our-creative__name">Shoo Phar Dhie</h3>
+                            <p class="our-creative__ceo">CEO</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="../../images/ourTeams/img2.png" alt="" class="our-creative__img">
+                        <div class="our-creative__card">
+                            <h3 class="our-creative__name">Shoo Phar Dhie</h3>
+                            <p class="our-creative__ceo">CEO</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="../../images/ourTeams/img3.png" alt="" class="our-creative__img">
+                        <div class="our-creative__card">
+                            <h3 class="our-creative__name">Shoo Phar Dhie</h3>
+                            <p class="our-creative__ceo">CEO</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="../../images/ourTeams/img4.png" alt="" class="our-creative__img">
+                        <div class="our-creative__card">
+                            <h3 class="our-creative__name">Shoo Phar Dhie</h3>
+                            <p class="our-creative__ceo">CEO</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="../../images/ourTeams/img5.png" alt="" class="our-creative__img">
+                        <div class="our-creative__card">
+                            <h3 class="our-creative__name">Shoo Phar Dhie</h3>
+                            <p class="our-creative__ceo">CEO</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="../../images/ourTeams/img6.png" alt="" class="our-creative__img">
+                        <div class="our-creative__card">
+                            <h3 class="our-creative__name">Shoo Phar Dhie</h3>
+                            <p class="our-creative__ceo">CEO</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <img src= "../../images/ourTeams/img7.png" alt="" class="our-creative__img">
+                        <div class="our-creative__card">
+                            <h3 class="our-creative__name">Shoo Phar Dhie</h3>
+                            <p class="our-creative__ceo">CEO</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="../../images/ourTeams/img8.png" alt="" class="our-creative__img">
+                        <div class="our-creative__card">
+                            <h3 class="our-creative__name">Shoo Phar Dhie</h3>
+                            <p class="our-creative__ceo">CEO</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-        </div>
+        </section>
+        <section class="our-choose">
+            <div class="container">
+                <div class="d-flex">
+                    <h3 class="our-choose__service">
+                        SERVICE
+                        <img src="../../images/ourTeams/line.png" alt="" class="our-choose__line">
+                    </h3>
+                </div>
+                <h3 class="our-choose__title">
+                    Why Choose Us
+                </h3>
+                <p class="our-choose__text">
+                    Customize your interior design into a dream place <br> with the best designers and quality
+                    furniture. We
+                    try <br> our best to fulfill your expectations.
+                </p>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="our-choose__ava"></div>
+                        <h4 class="our-choose__title">
+                            High Quality
+                        </h4>
+                        <p class="our-choose__text">
+                            Customize your interior design into a <br> dream place with the best designers <br> and
+                            quality
+                            furniture. We try our best <br> to fulfill your expectations.
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="our-choose__ava"></div>
+                        <h4 class="our-choose__title">
+                            Professional Designer
+                        </h4>
+                        <p class="our-choose__text">
+                            Customize your interior design into a <br> dream place with the best designers <br> and
+                            quality
+                            furniture. We try our best <br> to fulfill your expectations.
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="our-choose__ava"></div>
+                        <h4 class="our-choose__title">
+                            The Best Services
+                        </h4>
+                        <p class="our-choose__text">
+                            Customize your interior design into a <br> dream place with the best designers <br> and
+                            quality
+                            furniture. We try our best <br> to fulfill your expectations.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+
+
+          
+        </section>
+
     </main>
 
 
