--- a/src/projects/nurlan-project/src/pages/contacts/index.html
+++ b/src/projects/nurlan-project/src/pages/contacts/index.html
@@ -27,11 +27,103 @@
         </div> 
     </header>
     <main class="main">
-        <div class="container">
-            contacts
-            
+        <section class="contact-us">
+            <div class="container">
+                <h2 class="contact-us__title">
+                    Contact Us
+                </h2>
+                <p class="contact-us__text">
+                    It is a long established fact that a reader will be distracted by <br> the readable content of a
+                    page
+                    when looking at its layout.
+                </p>
+            </div>
+        </section>
+        <section class="contact-form">
+            <div class="container">
+                <form action="">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <label for="firstName"><b>First Name</b></label>
+                            <input type="text" id="" name="name" placeholder="First Name">
 
-        </div>
+                        </div>
+                        <div class="col-md-6">
+
+                            <label for="lastName"><b>Last Name</b></label>
+                            <input type="text" id="" name="email" placeholder="Last Name">
+                        </div>
+                    </div>
+
+                    <label for="email"><b>Email</b></label>
+                    <input type="text" id="" name="email" placeholder="Email">
+
+                    <label for="email"><b>Phone Number</b></label>
+                    <input type="text" id="" name="email" placeholder="First Name">
+
+                    <label for="email"><b>Message</b></label>
+                    <textarea id="subject" name="" placeholder="Your Message" style="height:178px"></textarea>
+                    <input type="submit" value="Send Massage">
+                </form>
+            </div>
+        </section>
+        <section class="contact-visit">
+            <div class="container">
+                <div class="d-flex">
+                    <h3 class="contact-visit__service">
+                        Loaction
+                        <img src="../../images/ourTeams/line.png" alt="" class="contact-visit__line">
+                    </h3>
+                </div>
+              <div class="d-flex">
+                <div class="contact-visit__left">
+                    <h3 class="contact-visit__title">
+                        Visit Our Stores
+                    </h3>
+                    <p class="contact-visit__text">
+                        Find us at these locations.
+                    </p>
+                    <div class="contact-visit__box">
+                        <p class="contact-visit__maxtext">Email</p>
+                        <p class="contact-visit__mintext">dananz@gmail.com</p>
+                    </div>
+                    <div class="contact-visit__box">
+                        <p class="contact-visit__maxtext">Phone</p>
+                        <p class="contact-visit__mintext">+62 815 002 1000</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class="contact-visit__maxtext">Jakarta</p>
+                        <p class="contact-visit__mintext">Customize your interior design into a <br> dream place with
+                            the
+                            best designers<br> and quality furniture. We try our best<br> to fulfill your expectations.
+                        </p>
+                        <p class="contact-visit__maxtext">Yogyakarta</p>
+                        <p class="contact-visit__mintext">Customize your interior design into a <br> dream place with
+                            the
+                            best designers<br> and quality furniture. We try our best<br> to fulfill your expectations.
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="contact-visit__maxtext">Surakarta</p>
+                        <p class="contact-visit__mintext">Customize your interior design into a <br> dream place with
+                            the
+                            best designers<br> and quality furniture. We try our best<br> to fulfill your expectations.
+                        </p>
+                        <p class="contact-visit__maxtext">Bandung</p>
+                        <p class="contact-visit__mintext">Customize your interior design into a <br> dream place with
+                            the
+                            best designers<br> and quality furniture. We try our best<br> to fulfill your expectations.
+                        </p>
+                    </div>
+                </div>
+              </div>
+             
+            </div>
+
+        </section>
+
     </main>
 
 
