--- a/src/projects/nurlan-project/index.html
+++ b/src/projects/nurlan-project/index.html
@@ -18,13 +18,18 @@
         <div class="container">
             <div class="header-container d-flex">
                 <a href="#"><img src="./src/images/home/header/logo.png" alt="logo" class="header__logo"></a>
-                <nav class="header__nav d-flex">
+                <nav class="header__nav">
                     <a href="#" class="header__links header__links-bold">Home</a>
                     <a href="./src/pages/about/" class="header__links">About Us</a>
                     <a href="./src/pages/services/" class="header__links">Services</a>
                     <a href="./src/pages/ourTeams/" class="header__links">Our Teams</a>
                     <a href="./src/pages/contacts/" class="header__links header__links-btn">Contact Us</a>
                 </nav>
+
+                <!--Иконка бургер меню-->
+                <div class="header__burger">
+                    <span></span>
+                </div>
             </div>
         </div>
 
@@ -57,7 +62,7 @@
                     </div>
                 </div>
                 <div class="home__img">
-                    <!-- <img src="../nurlan-project/src/images/home/home/home.png" alt="a picture"> -->
+                    
                 </div>
             </div>
         </section>
@@ -71,7 +76,7 @@
                 </div>
 
                 <h3 class="about__title">
-                    “We're one of the best furniture agency. Prioritizing customers <br> and making purchases easy are
+                    “We're one of the best furniture agency. Prioritizing customers and making purchases easy are
                     the
                     hallmarks of our agency.”
                 </h3>
@@ -93,8 +98,8 @@
                     </div>
                     <div class="about__main-right">
                         <div class="about__main-text">
-                            Online learning with us <br> does not interfere with <br> your daily life. because <br>
-                            learning can be done <br> anytime and anywhere.
+                            Online learning with us does not interfere with your daily life. because
+                            learning can be done anytime and anywhere.
                         </div>
 
                         <a href="#" class="about__main-btn">Learn More</a>
@@ -345,7 +350,7 @@
 
         <div class="footer-upper">
             <div class="row">
-                <div class="col-6">
+                <div class="col-6 footer-upper__left-container">
                     <h2 class="footer-upper__title">Let's discuss making your interior <br>like a dream place!</h2>
                 </div>
                 <div class="col-6 footer-upper__right-container">
@@ -420,6 +425,7 @@
         </div>
     </footer>
     <script src="./src/pages/home/home.js"></script>
+    <script src="./src/js/main.js"></script>
 </body>
 
 </html>
